esp32c6_rtdt_app/build/log/idf_py_stdout_output_92056
[1/10] Performing build step for 'bootloader'
[1/1] cd /home/ronaldo/esp/RTimu_displacement_tracker/esp32c6_rtdt_app/build/bootloader/esp-idf/esptool_py && /home/ronaldo/.espressif/python_env/idf5.4_py3.10_env/bin/python /home/ronaldo/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/ronaldo/esp/RTimu_displacement_tracker/esp32c6_rtdt_app/build/bootloader/bootloader.bin
Bootloader binary size 0x5610 bytes. 0x29f0 bytes (33%) free.
[2/10] No install step for 'bootloader'
[3/10] Completed 'bootloader'
[4/10] Building C object esp-idf/src/CMakeFiles/__idf_src.dir/app_tasks.c.obj
FAILED: esp-idf/src/CMakeFiles/__idf_src.dir/app_tasks.c.obj 
/home/ronaldo/.espressif/tools/riscv32-esp-elf/esp-14.2.0_20241119/riscv32-esp-elf/bin/riscv32-esp-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.4.2\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/ronaldo/esp/RTimu_displacement_tracker/esp32c6_rtdt_app/build/config -I/home/ronaldo/esp/RTimu_displacement_tracker/esp32c6_rtdt_app/src/include -I/home/ronaldo/esp/esp-idf/components/newlib/platform_include -I/home/ronaldo/esp/esp-idf/components/freertos/config/include -I/home/ronaldo/esp/esp-idf/components/freertos/config/include/freertos -I/home/ronaldo/esp/esp-idf/components/freertos/config/riscv/include -I/home/ronaldo/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/ronaldo/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/home/ronaldo/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -I/home/ronaldo/esp/esp-idf/components/freertos/esp_additions/include -I/home/ronaldo/esp/esp-idf/components/esp_hw_support/include -I/home/ronaldo/esp/esp-idf/components/esp_hw_support/include/soc -I/home/ronaldo/esp/esp-idf/components/esp_hw_support/include/soc/esp32c6 -I/home/ronaldo/esp/esp-idf/components/esp_hw_support/dma/include -I/home/ronaldo/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/ronaldo/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/ronaldo/esp/esp-idf/components/esp_hw_support/port/esp32c6/. -I/home/ronaldo/esp/esp-idf/components/esp_hw_support/port/esp32c6/include -I/home/ronaldo/esp/esp-idf/components/esp_hw_support/port/esp32c6/private_include -I/home/ronaldo/esp/esp-idf/components/heap/include -I/home/ronaldo/esp/esp-idf/components/heap/tlsf -I/home/ronaldo/esp/esp-idf/components/log/include -I/home/ronaldo/esp/esp-idf/components/soc/include -I/home/ronaldo/esp/esp-idf/components/soc/esp32c6 -I/home/ronaldo/esp/esp-idf/components/soc/esp32c6/include -I/home/ronaldo/esp/esp-idf/components/soc/esp32c6/register -I/home/ronaldo/esp/esp-idf/components/hal/platform_port/include -I/home/ronaldo/esp/esp-idf/components/hal/esp32c6/include -I/home/ronaldo/esp/esp-idf/components/hal/include -I/home/ronaldo/esp/esp-idf/components/esp_rom/include -I/home/ronaldo/esp/esp-idf/components/esp_rom/esp32c6/include -I/home/ronaldo/esp/esp-idf/components/esp_rom/esp32c6/include/esp32c6 -I/home/ronaldo/esp/esp-idf/components/esp_rom/esp32c6 -I/home/ronaldo/esp/esp-idf/components/esp_common/include -I/home/ronaldo/esp/esp-idf/components/esp_system/include -I/home/ronaldo/esp/esp-idf/components/esp_system/port/soc -I/home/ronaldo/esp/esp-idf/components/esp_system/port/include/riscv -I/home/ronaldo/esp/esp-idf/components/esp_system/port/include/private -I/home/ronaldo/esp/esp-idf/components/riscv/include -I/home/ronaldo/esp/esp-idf/components/lwip/include -I/home/ronaldo/esp/esp-idf/components/lwip/include/apps -I/home/ronaldo/esp/esp-idf/components/lwip/include/apps/sntp -I/home/ronaldo/esp/esp-idf/components/lwip/lwip/src/include -I/home/ronaldo/esp/esp-idf/components/lwip/port/include -I/home/ronaldo/esp/esp-idf/components/lwip/port/freertos/include -I/home/ronaldo/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/ronaldo/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/ronaldo/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/ronaldo/esp/esp-idf/components/driver/deprecated -I/home/ronaldo/esp/esp-idf/components/driver/i2c/include -I/home/ronaldo/esp/esp-idf/components/driver/touch_sensor/include -I/home/ronaldo/esp/esp-idf/components/driver/twai/include -I/home/ronaldo/esp/esp-idf/components/esp_pm/include -I/home/ronaldo/esp/esp-idf/components/esp_ringbuf/include -I/home/ronaldo/esp/esp-idf/components/esp_driver_gpio/include -I/home/ronaldo/esp/esp-idf/components/esp_driver_pcnt/include -I/home/ronaldo/esp/esp-idf/components/esp_driver_gptimer/include -I/home/ronaldo/esp/esp-idf/components/esp_driver_spi/include -I/home/ronaldo/esp/esp-idf/components/esp_driver_mcpwm/include -I/home/ronaldo/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/home/ronaldo/esp/esp-idf/components/esp_driver_i2s/include -I/home/ronaldo/esp/esp-idf/components/esp_driver_sdmmc/include -I/home/ronaldo/esp/esp-idf/components/sdmmc/include -I/home/ronaldo/esp/esp-idf/components/esp_driver_sdspi/include -I/home/ronaldo/esp/esp-idf/components/esp_driver_sdio/include -I/home/ronaldo/esp/esp-idf/components/esp_driver_dac/include -I/home/ronaldo/esp/esp-idf/components/esp_driver_rmt/include -I/home/ronaldo/esp/esp-idf/components/esp_driver_tsens/include -I/home/ronaldo/esp/esp-idf/components/esp_driver_sdm/include -I/home/ronaldo/esp/esp-idf/components/esp_driver_i2c/include -I/home/ronaldo/esp/esp-idf/components/esp_driver_uart/include -I/home/ronaldo/esp/esp-idf/components/vfs/include -I/home/ronaldo/esp/esp-idf/components/esp_driver_ledc/include -I/home/ronaldo/esp/esp-idf/components/esp_driver_parlio/include -I/home/ronaldo/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/ronaldo/esp/esp-idf/components/esp_timer/include -march=rv32imac_zicsr_zifencei  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=/home/ronaldo/esp/RTimu_displacement_tracker/esp32c6_rtdt_app=. -fmacro-prefix-map=/home/ronaldo/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/src/CMakeFiles/__idf_src.dir/app_tasks.c.obj -MF esp-idf/src/CMakeFiles/__idf_src.dir/app_tasks.c.obj.d -o esp-idf/src/CMakeFiles/__idf_src.dir/app_tasks.c.obj -c /home/ronaldo/esp/RTimu_displacement_tracker/esp32c6_rtdt_app/src/app_tasks.c
/home/ronaldo/esp/RTimu_displacement_tracker/esp32c6_rtdt_app/src/app_tasks.c: In function 'process_accel_data':
/home/ronaldo/esp/RTimu_displacement_tracker/esp32c6_rtdt_app/src/app_tasks.c:89:22: error: incompatible type for argument 1 of 'kalman_predict'
   89 |     kalman_predict(kf->kf_x, ax, dt, process_noise);
      |                    ~~^~~~~~
      |                      |
      |                      kalman1d_t
In file included from /home/ronaldo/esp/RTimu_displacement_tracker/esp32c6_rtdt_app/src/include/app_tasks.h:16,
                 from /home/ronaldo/esp/RTimu_displacement_tracker/esp32c6_rtdt_app/src/app_tasks.c:1:
/home/ronaldo/esp/RTimu_displacement_tracker/esp32c6_rtdt_app/src/include/kalman1d.h:11:33: note: expected 'kalman1d_t *' but argument is of type 'kalman1d_t'
   11 | void kalman_predict(kalman1d_t *kf, float a, float dt, float process_noise);
      |                     ~~~~~~~~~~~~^~
/home/ronaldo/esp/RTimu_displacement_tracker/esp32c6_rtdt_app/src/app_tasks.c:90:22: error: incompatible type for argument 1 of 'kalman_predict'
   90 |     kalman_predict(kf->kf_y, ay, dt, process_noise);
      |                    ~~^~~~~~
      |                      |
      |                      kalman1d_t
/home/ronaldo/esp/RTimu_displacement_tracker/esp32c6_rtdt_app/src/include/kalman1d.h:11:33: note: expected 'kalman1d_t *' but argument is of type 'kalman1d_t'
   11 | void kalman_predict(kalman1d_t *kf, float a, float dt, float process_noise);
      |                     ~~~~~~~~~~~~^~
/home/ronaldo/esp/RTimu_displacement_tracker/esp32c6_rtdt_app/src/app_tasks.c:91:22: error: incompatible type for argument 1 of 'kalman_predict'
   91 |     kalman_predict(kf->kf_z, az, dt, process_noise);
      |                    ~~^~~~~~
      |                      |
      |                      kalman1d_t
/home/ronaldo/esp/RTimu_displacement_tracker/esp32c6_rtdt_app/src/include/kalman1d.h:11:33: note: expected 'kalman1d_t *' but argument is of type 'kalman1d_t'
   11 | void kalman_predict(kalman1d_t *kf, float a, float dt, float process_noise);
      |                     ~~~~~~~~~~~~^~
/home/ronaldo/esp/RTimu_displacement_tracker/esp32c6_rtdt_app/src/app_tasks.c:98:17: error: 'kf_x' undeclared (first use in this function); did you mean 'kf'?
   98 |     state->vx = kf_x->v;
      |                 ^~~~
      |                 kf
/home/ronaldo/esp/RTimu_displacement_tracker/esp32c6_rtdt_app/src/app_tasks.c:98:17: note: each undeclared identifier is reported only once for each function it appears in
/home/ronaldo/esp/RTimu_displacement_tracker/esp32c6_rtdt_app/src/app_tasks.c:99:17: error: 'kf_y' undeclared (first use in this function); did you mean 'kf'?
   99 |     state->vy = kf_y->v;
      |                 ^~~~
      |                 kf
/home/ronaldo/esp/RTimu_displacement_tracker/esp32c6_rtdt_app/src/app_tasks.c:100:17: error: 'kf_z' undeclared (first use in this function); did you mean 'kf'?
  100 |     state->vz = kf_z->v;
      |                 ^~~~
      |                 kf
[5/10] Building C object esp-idf/src/CMakeFiles/__idf_src.dir/main.c.obj
ninja: build stopped: subcommand failed.
